Adding fetch users with shifts endpoint
