# core/endpoints.go
@@ -20,6 +20,7 @@ var Endpoints = map[Endpoint]EndpointConfig{
 	// users
 	{Path: "/api/v1/user", Method: "DELETE"}:         {RequireJWT: true, AccessLevel: models.AdminPermissionLevel},
 	{Path: "/api/v1/user/permission", Method: "PUT"}: {RequireJWT: true, AccessLevel: models.AdminPermissionLevel},
+	{Path: "/api/v1/users/shifts", Method: "GET"}:    {RequireJWT: true, AccessLevel: models.AdminPermissionLevel},
 
 	//shifts
 	{Path: "/api/v1/shift", Method: "POST"}:   {RequireJWT: true, AccessLevel: models.AdminPermissionLevel},
